Add /extractRdfFromFile call
